--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,42 @@
                     </archive>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>pl.project13.maven</groupId>
+                <artifactId>git-commit-id-plugin</artifactId>
+                <version>4.0.3</version>
+            </plugin>
+            <plugin>
+                <groupId>com.google.cloud.tools</groupId>
+                <artifactId>jib-maven-plugin</artifactId>
+                <version>2.7.0</version>
+                <configuration>
+                    <from>
+                        <image>openjdk:15-slim</image>
+                    </from>
+                    <to>
+                        <image>gcr.io/${project.artifactId}:latest</image>
+                        <!-- optional: create a tag based on the git commit id (via the git-commit-id plugin): -->
+<!--                        <tags>-->
+<!--                            <tag>${git.commit.id}</tag>-->
+<!--                        </tags>-->
+                    </to>
+                    <container>
+                        <jvmFlags>
+                            <jvmFlag>-server</jvmFlag>
+                        </jvmFlags>
+                    </container>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>build-docker-image</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>dockerBuild</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 <!--            <plugin>-->
 <!--                <groupId>org.openapitools</groupId>-->
 <!--                <artifactId>openapi-generator-maven-plugin</artifactId>-->
