--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,4 @@
 steps:
   - name: 'gcr.io/cloud-builders/mvn'
-    args: ['install']
-  - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '--tag=gcr.io/$PROJECT_ID/vote-back', '.']
+    args: ['package']
 images: ['gcr.io/$PROJECT_ID/vote-back']
