--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,4 +1,11 @@
 steps:
   - name: 'gcr.io/cloud-builders/mvn'
     args: ['package']
+  - name: 'gcr.io/cloud-builders/docker'
+    args:
+      - 'build'
+      - '--tag=gcr.io/$PROJECT_ID/vote-back'
+      - '.'
+    waitFor: ['-']
+    id: 'latest'
 images: ['gcr.io/$PROJECT_ID/vote-back']
