added wait for mvn build on CI

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,7 @@
 steps:
   - name: 'gcr.io/cloud-builders/mvn'
     args: ['package']
+    waitFor: ['-']
   - name: 'gcr.io/cloud-builders/docker'
     args:
       - 'build'
