--- a/pom.xml
+++ b/pom.xml
@@ -142,16 +142,15 @@
                 <artifactId>jib-maven-plugin</artifactId>
                 <version>2.7.0</version>
                 <configuration>
-                    <skip>true</skip> <!-- skip to use Docker build for now -->
                     <from>
                         <image>openjdk:15-slim</image>
                     </from>
                     <to>
-                        <image>gcr.io/${project.artifactId}:latest</image>
+                        <image>${project.artifactId}:latest</image>
                         <!-- optional: create a tag based on the git commit id (via the git-commit-id plugin): -->
-<!--                        <tags>-->
-<!--                            <tag>${git.commit.id}</tag>-->
-<!--                        </tags>-->
+                        <tags>
+                            <tag>jib-version</tag>
+                        </tags>
                     </to>
                     <container>
                         <jvmFlags>
