--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,8 @@
 # CI steps for Google Cloud Build
 steps:
   - name: 'gcr.io/$PROJECT_ID/mvn-with-deps'
-    args: ['package', 'jib:build']
+    args:
+    - 'package'
+    - 'jib:build'
+    - '-Dtarget.image=gcr.io/$PROJECT_ID/vote-backend'
 #images: ['gcr.io/$PROJECT_ID/vote-backend']
