--- a/mvn-with-deps/Dockerfile
+++ b/mvn-with-deps/Dockerfile
@@ -3,4 +3,4 @@
 FROM gcr.io/cloud-builders/mvn
 WORKDIR /tmp
 COPY pom.xml .
-RUN mvn -B dependency:go-offline
+RUN ["mvn", "-B", "clean", "dependency:go-offline"]
