--- a/pom.xml
+++ b/pom.xml
@@ -11,14 +11,9 @@
 
     <name>Vote Backend</name>
 
-    <parent>
-        <groupId>io.micronaut</groupId>
-        <artifactId>micronaut-parent</artifactId>
-        <version>2.2.2</version>
-    </parent>
-
     <properties>
         <jdk.version>15</jdk.version>
+        <maven.compiler.release>11</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <exec.mainClass>digital.future.vote.backend.VoteApplication</exec.mainClass>
         <micronaut.version>2.2.2</micronaut.version>
@@ -29,13 +24,13 @@
 
     <dependencyManagement>
         <dependencies>
-<!--            <dependency>-->
-<!--                <groupId>io.micronaut</groupId>-->
-<!--                <artifactId>micronaut-bom</artifactId>-->
-<!--                <version>${micronaut.version}</version>-->
-<!--                <type>pom</type>-->
-<!--                <scope>import</scope>-->
-<!--            </dependency>-->
+            <dependency>
+                <groupId>io.micronaut</groupId>
+                <artifactId>micronaut-bom</artifactId>
+                <version>${micronaut.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <!--            <dependency>-->
             <!--                <groupId>org.jdbi</groupId>-->
             <!--                <artifactId>jdbi3-bom</artifactId>-->
@@ -149,17 +144,12 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>io.micronaut.build</groupId>
-                <artifactId>micronaut-maven-plugin</artifactId>
-                <version>1.1.2</version>
-            </plugin>
-            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
                     <encoding>UTF-8</encoding>
                     <!-- Uncomment to enable incremental compilation -->
                     <!-- <useIncrementalCompilation>false</useIncrementalCompilation> -->
@@ -169,6 +159,16 @@
                             <artifactId>lombok</artifactId>
                             <version>${lombok.version}</version>
                         </path>
+                        <path>
+                            <groupId>io.micronaut</groupId>
+                            <artifactId>micronaut-inject-java</artifactId>
+                            <version>${micronaut.version}</version>
+                        </path>
+                        <path>
+                            <groupId>io.micronaut</groupId>
+                            <artifactId>micronaut-validation</artifactId>
+                            <version>${micronaut.version}</version>
+                        </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
                         <arg>-Amicronaut.processing.group=digital.future.vote</arg>
@@ -176,6 +176,7 @@
                     </compilerArgs>
                 </configuration>
             </plugin>
+
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
@@ -207,9 +208,8 @@
                     <to>
                         <image>${target.image}</image>
                         <!-- optional: create a tag based on the git commit id (via the git-commit-id plugin): -->
-                        <!--                        <tags>-->
-                        <!--                            <tag>jib-version</tag>-->
-                        <!--                        </tags>-->
+                        <tags>
+                        </tags>
                     </to>
                     <container>
                         <jvmFlags>
