--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,16 +7,16 @@ jackson:
 
 datasources:
   default:
-    url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
-    username: sa
-    password: ''
-    dialect: H2
-#    url: jdbc:postgresql://localhost:5432/predator?ssl=false
-#    driverClassName: org.postgresql.Driver
-#    username: postgres
-#    password: okunek777
-#    dialect: POSTGRES
+#    url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+#    driverClassName: org.h2.Driver
+#    username: sa
+#    password: ''
+#    dialect: H2
+    url: jdbc:postgresql://localhost:5432/vote?ssl=false
+    driverClassName: org.postgresql.Driver
+    username: vote
+    password: gJnUwvJ&EbeP
+    dialect: POSTGRES
 
 
 #jpa:
