--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,7 +16,7 @@ steps:
   ###########################################################
   # Step 1: Retrieve the cached .m2 directory from GCS
   ###########################################################
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:alpine'
+  - name: 'gcr.io/cloud-builders/gsutil'
     args:
       - '-m'
       - 'rsync'
@@ -49,7 +49,7 @@ steps:
   #         additional dependencies downloaded during the
   #         build.
   ###########################################################
-  - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk:alpine'
+  - name: 'gcr.io/cloud-builders/gsutil'
     args:
       - '-m'
       - 'rsync'
