--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -62,7 +62,7 @@ steps:
 
 substitutions:
   # Default values
-  _BUCKET: 'vote-301515.appspot.com'
+  _BUCKET: 'vote-back-cache'
 
 #artifacts:
 #  # Upload the jars created during the build.
