--- a/src/main/resources/application-gcp.yml
+++ b/src/main/resources/application-gcp.yml
@@ -1,6 +1,6 @@
 datasources:
   default:
-    url: jdbc:postgresql:///google?cloudSqlInstance=vote-301515:europe-west4:votedb&socketFactory=com.google.cloud.sql.postgres.SocketFactory&
+    url: jdbc:postgresql:///votedb?cloudSqlInstance=vote-301515:europe-west4:votedb&socketFactory=com.google.cloud.sql.postgres.SocketFactory&
     driverClassName: org.postgresql.Driver
     username: vote
     password: gJnUwvJ&EbeP
