--- a/pom.xml
+++ b/pom.xml
@@ -137,6 +137,20 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- Security -->
+        <dependency>
+            <groupId>io.micronaut.security</groupId>
+            <artifactId>micronaut-security-annotations</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micronaut.security</groupId>
+            <artifactId>micronaut-security-jwt</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.micronaut.security</groupId>
+            <artifactId>micronaut-security-oauth2</artifactId>
+        </dependency>
+
         <!-- Swagger -->
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
