--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,29 +11,37 @@ micronaut:
         paths: classpath:META-INF/swagger/views/swagger-ui
         mapping: /swagger-ui/**
 
+  security:
+    basic-auth:
+      enabled: true
+    authentication: idtoken
+    oauth2:
+      clients:
+        google:
+#          client-secret: <<your client secret>>
+#          client-id: <<your client id>>
+#          openid:
+#            issuer: https://accounts.google.com
+
 jackson:
   bean-introspection-module: true
 
 datasources:
   default:
-#    url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-#    driverClassName: org.h2.Driver
-#    username: sa
-#    password: ''
-#    dialect: H2
     url: jdbc:postgresql://localhost:5432/vote?ssl=false
     driverClassName: org.postgresql.Driver
     username: vote
     password: gJnUwvJ&EbeP
     dialect: POSTGRES
 
+# database migration
 flyway:
   datasources:
     default:
       enabled: true
       locations: classpath:db/migration
 
-# expose for debug and monitoring
+# expose /m path for debug and monitoring
 endpoints:
   all.path: /m
   flyway:
@@ -45,22 +53,8 @@ endpoints:
   info:
     enabled: true
     sensitive: false
-
-#
-#security:
-#  enabled: true
-#  endpoints:
-#    login:
-#      enabled: true
-#    oauth:
-#      enabled: true
-#  token:
-#    jwt:
-#      enabled: true
-#      signatures:
-#        secret:
-#          generator:
-#            secret: "${JWT_GENERATOR_SIGNATURE_SECRET:pleaseChangeThisSecretForANewOne}"
+  loggers:
+    enabled: true
 
 # alternative way to specify log level
 logger:
