Decided to use UID class to identify Votes. UID is Base58 encoded 16bit random + 1bit crc.

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,14 @@
     </dependencyManagement>
 
     <dependencies>
+        <!-- Base58 Encoding -->
+        <dependency>
+            <groupId>com.google</groupId>
+            <artifactId>bitcoinj</artifactId>
+            <version>0.11.3</version>
+        </dependency>
+
+        <!-- Micronaut -->
         <dependency>
             <groupId>io.micronaut</groupId>
             <artifactId>micronaut-inject</artifactId>
