--- a/src/main/resources/application-gcp.yml
+++ b/src/main/resources/application-gcp.yml
@@ -2,6 +2,6 @@ datasources:
   default:
     url: jdbc:postgresql:///votedb?cloudSqlInstance=vote-301515:europe-west4:votedb&socketFactory=com.google.cloud.sql.postgres.SocketFactory&
     driverClassName: org.postgresql.Driver
-    username: vote
+    username: votedb_user
     password: gJnUwvJ&EbeP
     dialect: POSTGRES
