--- a/pom.xml
+++ b/pom.xml
@@ -11,19 +11,14 @@
 
     <name>Vote Backend</name>
 
-    <!--    <parent>-->
-    <!--        <groupId>io.micronaut</groupId>-->
-    <!--        <artifactId>micronaut-parent</artifactId>-->
-    <!--        <version>2.2.2</version>-->
-    <!--    </parent>-->
-
     <properties>
         <jdk.version>15</jdk.version>
         <maven.compiler.release>15</maven.compiler.release>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <exec.mainClass>digital.future.vote.backend.VoteApplication</exec.mainClass>
-        <micronaut.version>2.2.2</micronaut.version>
-        <micronaut-data.version>2.2.1</micronaut-data.version>
+        <micronaut.version>2.3.1</micronaut.version>
+        <micronaut.security.version>2.3.0</micronaut.security.version>
+        <micronaut.data.version>2.2.4</micronaut.data.version>
         <lombok.version>1.18.16</lombok.version>
         <junit.version>[4.13.1,)</junit.version>
         <target.image>[[[unknown_image_name]]]</target.image> <!-- default -->
@@ -41,7 +36,6 @@
             <dependency>
                 <groupId>io.micronaut.data</groupId>
                 <artifactId>micronaut-data-bom</artifactId>
-                <version>2.2.1</version>
                 <type>pom</type>
             </dependency>
         </dependencies>
@@ -103,12 +97,6 @@
         <!--  DATABASE RELATED  -->
         <!-- ================== -->
 
-        <!-- Hibernate support, not needed for JDBC-only -->
-        <!--        <dependency>-->
-        <!--            <groupId>io.micronaut.data</groupId>-->
-        <!--            <artifactId>micronaut-data-hibernate-jpa</artifactId>-->
-        <!--            <scope>compile</scope>-->
-        <!--        </dependency>-->
         <!-- Direct JDBC support (if Hibernate not welcomed) -->
         <dependency>
             <groupId>io.micronaut.data</groupId>
@@ -172,17 +160,15 @@
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-core</artifactId>
-            <version>2.1.6</version>
         </dependency>
         <dependency>
             <groupId>io.swagger.core.v3</groupId>
             <artifactId>swagger-annotations</artifactId>
-            <version>2.1.6</version>
         </dependency>
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>swagger-ui</artifactId>
-            <version>3.38.0</version>
+            <version>3.40.0</version>
         </dependency>
 
 
@@ -223,7 +209,7 @@
                     <source>${jdk.version}</source>
                     <target>${jdk.version}</target>
                     <encoding>UTF-8</encoding>
-                    <fork>true</fork>
+<!--                    <fork>true</fork>-->
                     <!-- Uncomment to enable incremental compilation -->
                     <!-- <useIncrementalCompilation>false</useIncrementalCompilation> -->
                     <annotationProcessorPaths combine.children="append">
@@ -233,7 +219,7 @@
                             <version>${lombok.version}</version>
                         </path>
                         <path>
-                            <groupId>io.micronaut</groupId>
+                            <groupId>io.micronaut</groupId> <!-- Introspection -->
                             <artifactId>micronaut-inject-java</artifactId>
                             <version>${micronaut.version}</version>
                         </path>
@@ -245,12 +231,17 @@
                         <path>
                             <groupId>io.micronaut.data</groupId>
                             <artifactId>micronaut-data-processor</artifactId>
-                            <version>${micronaut-data.version}</version>
+                            <version>${micronaut.data.version}</version>
                         </path>
                         <path> <!-- for swagger annotations -->
                             <groupId>io.micronaut.openapi</groupId>
                             <artifactId>micronaut-openapi</artifactId>
                             <version>${micronaut.version}</version>
+                        </path>
+                        <path>
+                            <groupId>io.micronaut.security</groupId>
+                            <artifactId>micronaut-security-annotations</artifactId>
+                            <version>${micronaut.security.version}</version>
                         </path>
                     </annotationProcessorPaths>
                     <compilerArgs>
