--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,23 +11,47 @@ micronaut:
         paths: classpath:META-INF/swagger/views/swagger-ui
         mapping: /swagger-ui/**
 
+  http:
+    services:
+      githubv3:
+        url: "https://api.github.com"
+
   security:
-    enabled: false
-    authentication: bearer
-    redirect:
-      forbidden: true
+#    enabled: false
 
 
-#    basic-auth:
-#      enabled: true
-#    authentication: idtoken
-#    oauth2:
-#      clients:
+    basic-auth:
+      enabled: true
+    authentication: idtoken
+#    authentication: cookie
+    token:
+      jwt:
+        signatures:
+          secret:
+            generator:
+              secret: '"${JWT_GENERATOR_SIGNATURE_SECRET:Dv2dqx6dW0w21U9IFA7t0eOjkMB0bf6k}"'
+    oauth2:
+      clients:
+        github:
+          client-id: e02a6af391ffc5a454da
+          client-secret: d886b6e471ac63dfb1316eb884a759e4449c9025
+#          scopes:
+#            - 'user:email'
+#            - 'read:user'
+          authorization:
+            url: 'https://github.com/login/oauth/authorize'
+          token:
+            url: 'https://github.com/login/oauth/access_token'
+          auth-method: client-secret-post
 #        google:
-#          client-secret: <<your client secret>>
-#          client-id: <<your client id>>
-#          openid:
-#            issuer: https://accounts.google.com
+#          client-id: 857066476501-khdp7f8snlte69tu62mgj2lbibg8j80i.apps.googleusercontent.com
+#          client-secret: XXy2i7yjRAopJMIU-YAZSeBI
+
+
+    endpoints:
+      logout:
+        get-allowed: true
+    reject-not-found: false
 
 jackson:
   bean-introspection-module: true
